--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "node ."
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "npm": "^8.7.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0"
