--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "sequelize": "^6.19.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.4.1"
   },
   "keywords": [],
   "author": "",
