--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "npm": "^8.7.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.19.0"
+    "sequelize": "^6.19.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
     "sequelize-cli": "^6.4.1"
   },
